--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,6 @@
 <h1>This Is The Admin</h1>
 <p><%= @about_me %></p>
-<p> <% answer = 2 + 3 %> 
+<p>
+	<% answer = 2 + 3 %> 
 	2 + 2 = <%= answer %>
 </p>
